added css to order summary

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <h4 class="remove-save">Remove</h4>
 <button class="add-to-cart">Add To Cart</button>
 
-<p>By placing your order, you agree to the Terms of Use and Privacy Policy.</p>
+
 
 
 
@@ -248,33 +248,33 @@
 <!--order summary-->
 <div class="order">
 <h1>Order Summary</h1>
+<div class="underline4"></div>
 
+<div class="order-summary">
 <h4>Credits in your Account</h4>
 <h4>Credits required</h4>
 
 <h4>Promo Code</h4>
-<div class="underline"></div>
+<div class="underline5"></div>
 
 <h4>Subtotal</h4>
 <h4>Tax</h4>
-<div class="underline"></div>
-
-<h4>Total</h4>
-<div class="underline"></div>
-
+<div class="underline6"></div>
 <h4>TOTAL</h4>
-<div class="underline"></div>
+<div class="underline7"></div>
 
-<h4>Payment Method</h4>
-<h4>American Express - 1234</h4>
-<a href="change">Change</a>
-<div class="underline"></div>
-
-<h4>All sales are final.</h4>
-<button class="place-order-btn">Place Order</button>
+<h4 class="payment-method">Payment Method</h4>
+<h4 class="american-express">American Express - 1234</h4>
 </div>
+<a class="change" href="change">Change</a>
+<div class="underline8"></div>
+
+<h4 class="sales-final">All sales are final.</h4>
+<button class="place-order-btn">Place Order</button>
+
+<p class="policy">By placing your order, you agree to the Terms <br> of Use and Privacy Policy.</p>
+</div>
+
 </body>
-
-
 </html>
 
